Agregando plugin para cuenta regresiva

--- a/index.html
+++ b/index.html
@@ -309,16 +309,16 @@
         <div class="cuenta-regresiva">
             <ul class="clearfix">
                 <li>
-                    <p class="numero">80</p> días
+                    <p id="dias" class="numero"></p> días
                 </li>
                 <li>
-                    <p class="numero">17</p> horas
+                    <p id="horas" class="numero"></p> horas
                 </li>
                 <li>
-                    <p class="numero">26</p> minutos
+                    <p id="minutos" class="numero"></p> minutos
                 </li>
                 <li>
-                    <p class="numero">47</p> segundos
+                    <p id="segundos" class="numero"></p> segundos
                 </li>
 
             </ul>
@@ -367,6 +367,7 @@
 
     <script src="js/plugins.js "></script>
     <script src="js/jquery.animateNumber.js "></script>
+    <script src="js/jquery.countdown.js "></script>
     <script src="js/main.js "></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
