Agregando el plugin de lettering y modificando el logo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p class="date"><i class="fas fa-calendar-alt"></i> 10-12 Dic</p>
                         <p class="location"><i class="fas fa-map-marker-alt"></i> Buenos Aires - Arg</p>
                     </div>
-                    <h1 class="name-website">BsAsWebCamp</h1>
+                    <h1 class="website-name">BsAsWebCamp</h1>
                     <p class="slogan">La mejor conferencia de <span>Diseño Web</span></p>
                 </div>
 
@@ -368,6 +368,7 @@
     <script src="js/plugins.js "></script>
     <script src="js/jquery.animateNumber.js "></script>
     <script src="js/jquery.countdown.js "></script>
+    <script src="js/jquery.lettering.js "></script>
     <script src="js/main.js "></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
