--- a/conferencia.html
+++ b/conferencia.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/lightbox.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald&family=PT+Sans&display=swap" rel="stylesheet">
@@ -133,6 +134,7 @@
     <script src="js/jquery.animateNumber.js "></script>
     <script src="js/jquery.countdown.js "></script>
     <script src="js/jquery.lettering.js "></script>
+    <script src="js/lightbox.js "></script>
     <script src="js/main.js "></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
