Creando galeria en la seccion de conferencia

--- a/conferencia.html
+++ b/conferencia.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body class="conferencia">
     <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -67,7 +67,7 @@
             </div>
 
             <nav class="navegacion-principal clearfix">
-                <a href="conferencia.html">Conferencia</a>
+                <a href="conferencia.html" class="activo">Conferencia</a>
                 <a href="#">Calendario</a>
                 <a href="#">Invitados</a>
                 <a href="registro.html">Reservaciones</a>
@@ -85,8 +85,40 @@
         </p>
     </section>
 
-    <section class="seccion">
+    <section class="seccion contenedor">
         <h2>Galería de Fotos</h2>
+        <div class="galeria">
+            <a href="img/galeria/01.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/01.jpg">
+            </a>
+            <a href="img/galeria/02.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/02.jpg">
+            </a>
+            <a href="img/galeria/03.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/03.jpg">
+            </a>
+            <a href="img/galeria/04.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/04.jpg">
+            </a>
+            <a href="img/galeria/05.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/05.jpg">
+            </a>
+            <a href="img/galeria/06.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/06.jpg">
+            </a>
+            <a href="img/galeria/07.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/07.jpg">
+            </a>
+            <a href="img/galeria/08.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/08.jpg">
+            </a>
+            <a href="img/galeria/09.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/09.jpg">
+            </a>
+            <a href="img/galeria/10.jpg" data-lightbox="galeria">
+                <img src="img/galeria/thumbs/10.jpg">
+            </a>
+        </div>
     </section>
 
 
