Agregando la cuenta regresiva y el nuevo plugin

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
     <script src="js/plugins.js "></script>
     <script src="js/jquery.animateNumber.js "></script>
-    <script src="js/jquery.countdown.js "></script>
+    <script src="js/countdown.js"></script>
     <script src="js/jquery.lettering.js "></script>
     <script src="js/main.js "></script>
 
