--- a/registro.html
+++ b/registro.html
@@ -42,7 +42,7 @@
                         <p class="date"><i class="fas fa-calendar-alt"></i> 10-12 Dic</p>
                         <p class="location"><i class="fas fa-map-marker-alt"></i> Buenos Aires - Arg</p>
                     </div>
-                    <h1 class="name-website">BsAsWebCamp</h1>
+                    <h1 class="website-name">BsAsWebCamp</h1>
                     <p class="slogan">La mejor conferencia de <span>Diseño Web</span></p>
                 </div>
 
@@ -306,6 +306,7 @@
         window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js "><\/script>')
     </script>
     <script src="js/plugins.js "></script>
+    <script src="js/jquery.lettering.js "></script>
     <script src="js/main.js "></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
